src/highlighter.css
.findings-highlight {
    background: rgba(255, 242, 51, 0.3);
    -webkit-transition: background 0.1s linear;
    }
.findings-highlight.fndgs_active {
    background: rgba(255, 242, 51, 0.6);
    border-bottom: none;
    }

.findings-highlight.fndgs_disabled {
    background: none;
}

#findings-control {
    position: fixed;
    top: 30px;
    right: 0;
    z-index: 2147483647;
    background: rgba(255,255,255,0.8);
    padding: 6px;
    padding-right: 11px;
    border: solid 1px #ccc;
    border-right: none;
    }

/* Logo */
#findings-control .fndgs_logo_container {
    width: 35px;
    height: 54px;
    position: relative;
    float: left;
    clear: both;
    cursor: pointer;
    }
#findings-control .fndgs_logo_container .fndgs_inner_container {
    position: absolute;
    left: 0;
    top: 0;
    right: auto;
    width: 35px;
}
#findings-control #fndgs_logo {
    background-size: auto 35px;
    width: 35px;
    height: 35px;
    float: left;
    clear: both;
    background-position: -1px 0;
    }
#findings-control .fndgs_close_highlight_box {
    display: block;
    height: 19px;
    width: 18px;
    float: left;
    border-left: solid 1px #ccc;
    box-sizing: border-box;
    background-position: -96px 6px;
    background-color: #ddd;
    }
#findings-control .fndgs_close_highlight_box:hover {
    background-position: -96px -44px;
    background-color: #bbb;
    opacity: 1;
}
#findings-control .fndgs_highlight_settings {
    height: 19px;
    width: 17px;
    float: left;
    background-position: -195px 6px;
    background-color: #ddd;
}
#findings-control .fndgs_highlight_settings:hover {
    background-position: -195px -45px;
    background-color: #bbb;
}
#findings-control .fndgs_highlighter_box {
    display: block;
    width: 35px;
    height: 35px;
    float: left;
    background: #dfdfdf;
    box-sizing: border-box;
    background-position: -143px 8px;
    clear: both;
    cursor: pointer;
    display: none;
    }
#findings-control .fndgs_highlighter_box:hover {
    background-color: #bbb;
    background-position: -143px -42px;
}
#findings-control .fndgs_logo_container.fndgs_active .fndgs_show_highlight_box, #findings-control .fndgs_logo_container.fndgs_active .fndgs_highlighter_box {
    display: block;
    }

/* Avatars */
#findings-control .fndgs_person_container {
    width: 41px;
    position: relative;
    float: left;
    clear: both;
    padding-right: 0;
    height: 35px;
    }
#findings-control .fndgs_person_container .fndgs_inner_container {
    position: absolute;
    top: 0;
    left: 0;
    right: -5px;
    float: left;
    z-index: 8;
}
#findings-control .fndgs_marker {
    width: 6px;
    height: 35px;
    float: right;
    background: transparent;
    -webkit-transition: background 0.1s linear;
}
#findings-control .fndgs_person {
    background-size: auto 35px;
    width: 35px;
    height: 35px;
    clear: both;
    box-sizing: border-box;
    background-position: center center;
    float: left;
    }
#findings-control .fndgs_person_container .fndgs_name {
    box-sizing: border-box;
    font-size: 10px;
    line-height: 10px;
    font-family: sans-serif;
    color: #fff;
    background: #111;
    line-height: 20px;
    text-align: left;
    position: absolute;
    height: 20px;
    right: 0;
    z-index: 999;
    top: 0;
    padding: 0 4px 0;
    display: none;
    float: left;
    width: 100%;
    }
#findings-control .fndgs_quote_box {
    float: left;
    width: 35px;
    height: 35px;
    background-color: #eaeaea;
    box-sizing: border-box;
    background-position: -39px 8px;
    display: none;
    }
#findings-control .fndgs_quote_box:hover {
    background-color: #bbb;
    background-position: -39px -42px;
    }

#findings-control .fndgs_link_box {
    display: none;
    width: 35px;
    height: 35px;
    float: left;
    background: #eaeaea;
    box-sizing: border-box;
    background-position: 9px 8px;
    }
#findings-control .fndgs_link_box:hover {
    background-color: #bbb;
    background-position: 9px -42px;
    }

/* Person Highlight */
#findings-control .fndgs_person_container.fndgs_highlight .fndgs_marker {
    background: rgba(80,151,217,0.5);
    }
#findings-control .fndgs_person_container:hover .fndgs_inner_container {
    }
#findings-control .fndgs_person_container.fndgs_highlight:hover .fndgs_marker {
    background: rgba(80,151,217,1);
}
#findings-control .fndgs_person_container.fndgs_highlight_hover .fndgs_marker {
    background: rgba(80,151,217,1);
    }

/* Person Active */
#findings-control .fndgs_person_container.fndgs_active {
    }
#findings-control .fndgs_person_container.fndgs_active .fndgs_inner_container {
    width: 105px;
    left: -70px;
    padding-top: 20px;
    top: -20px;
    box-shadow: 0 0 2px rgba(0,0,0,0.5);
    z-index: 9;
    }
#findings-control .fndgs_person_container.fndgs_active .fndgs_name {
    display: block;
    }
#findings-control .fndgs_person_container.fndgs_active .fndgs_quote_box, #findings-control .fndgs_person_container.fndgs_active .fndgs_link_box {
    display: block;
    cursor: pointer;
    }

/* Comments */
/* These will be embedded in the page, so we need to do some resetting
 * to make sure that the page's css doesn't fuck with us
 */
.findings-comments {
    background: #fff;
    color: #222;
    line-height: 1.35em;
    font-size: 13px;
    font-family: sans-serif;
    float: left;
    box-shadow: 0 1px 4px rgba(0,0,0,0.6);
    position: absolute;
    top: 0;
    left: 0;
    max-width: 500px;
    min-height: 30px;
    box-sizing: border-box;
    display: none;
    text-align: left;
    white-space: nowrap;
    /* This should float above everything */
    z-index: 2147483647;
    border: solid 4px rgba(80,151,217,1);
}

.findings-comments .findings-comment {
    padding: 5px 0 3px 6px;
    clear: both;
    background: #eee;
    border-bottom: solid 1px #ccc;
    border-top: solid 1px #fafafa;
}
.findings-comments .findings-comment:first-child {
    border-top: none;
}
.findings-comments .findings-comment:last-child {
    border-bottom: none;
}

.findings-comments .findings-comment:last-child {
    margin-bottom: 0px;
}

.findings-comments .findings-comment .fndgs_comment-image {
    height: 30px;
    margin-top: 3px;
    width: 30px;
    background-size: 100% auto;
    background-position: center center;
    display: inline-block;
}
.findings-comments .findings-comment .fndgs_comment-content {
    display: inline-block;
    vertical-align: top;
    padding-left: 8px;
    padding-right: 12px;
    white-space: normal;
    max-width: 450px;
}
.findings-comments .findings-comment a {
    font-weight: bold;
    color: #000;
}
#findings-control .fndgs_comment_indicator {
    width: 12px;
    height: 12px;
    position: absolute;
    bottom: 3px;
    left: 4px;
    background-position: -250px 1px;
}
.findings-comment .fndgs_comment_user_name {
    font-weight: bold;
}
.findings-comments.fndgs_active {
    display: block;
}

